--- a/Main.html
+++ b/Main.html
@@ -2,6 +2,7 @@
 <html>
     <head>
     <link rel="stylesheet" href="buttonsfactory.css">
+            <link rel="stylesheet" href="Textfactory.css">
         <div class="button1">sdfsdfsdf</div>  
     </head>
     <body>
