--- a/Main.html
+++ b/Main.html
@@ -3,7 +3,7 @@
     <head>
     <link rel="stylesheet" href="buttonsfactory.css">
             <link rel="stylesheet" href="TextFactory.css">
-        <div class="button1">sdfsdfsdf</div>  
+        <div class="redtext">sdfsdfsdf</div>  
     </head>
     <body>
     
