--- a/Main.html
+++ b/Main.html
@@ -3,7 +3,8 @@
     <head>
     <link rel="stylesheet" href="buttonsfactory.css">
             <link rel="stylesheet" href="TextFactory.css">
-        <div class="redText">sdfsdfsdf</div>  
+ <button class="w3-button w3-black">Black</button> 
+        <button class="">Black</button>
     </head>
     <body>
     
