--- a/Main.html
+++ b/Main.html
@@ -3,7 +3,7 @@
     <head>
     <link rel="stylesheet" href="buttonsfactory.css">
      <link rel="stylesheet" href="TextFactory.css">
- 	<button class="sk-button">Black</button> 
+ 	<button class="sk-button">Button Name</button> 
      
 	</head>
     <body>
