--- a/Main.html
+++ b/Main.html
@@ -7,6 +7,6 @@
      
 	</head>
     <body>
-    <button class="sk-button">Button Name</button> 
+    <button class="mybutton">Button Name</button> 
     </body>
 </html>
