--- a/Main.html
+++ b/Main.html
@@ -8,5 +8,6 @@
 	</head>
     <body>
     <button class="sk-tiny">Button Name</button> 
+	    <button class="sk-xlarge">Button Name</button> 
     </body>
 </html>
