--- a/Main.html
+++ b/Main.html
@@ -5,7 +5,8 @@
     <link rel="stylesheet" href="TextFactory.css">    
     </head>
     <body>
-    <button class="sk-tiny">Button Name</button> 
-    <button class="sk-xlarge">Button Name</button> 
+    <button class="sk-tiny">Button Tiny</button> 
+        <br/>
+    <button class="sk-xlarge">Button Xlarge</button> 
     </body>
 </html>
