--- a/Main.html
+++ b/Main.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="TextFactory.css">    
     </head>
     <body>
-    <button class="sk-tiny">Button Tiny</button> 
+    <button class="sk-tiny">Button Tiny updated</button> 
         <br/>
     <button class="sk-xlarge">Button Xlarge</button> 
     </body>
