--- a/Main.html
+++ b/Main.html
@@ -7,6 +7,6 @@
     <body>
     <button class="sk-tiny">Button Tiny updated</button> 
         <br/>
-    <button class="sk-xlarge">Button Xlarge</button> 
+    <button class="sk-btn-india">Button Xlarge</button> 
     </body>
 </html>
